# stellar-zk-gaming

./: .env.example  .gitignore  README.md
zk-game-theory/: Cargo.toml  package.json
zk-game-theory/circuits/: Nargo.toml  generate_vk.js  package.json
zk-game-theory/circuits/src/: hash.nr  main.nr
zk-game-theory/contracts/mock-game-hub/: Cargo.toml
zk-game-theory/contracts/zk-game-theory/: Cargo.toml  README.md
zk-game-theory/contracts/zk-game-theory/src/: lib.rs  test.rs
zk-game-theory/contracts/zk-game-theory/src/lib.rs.backup/: lib.rs.bak
zk-game-theory/frontend/: index.html  package.json  read_state.ts  vite.config.ts
zk-game-theory/frontend/src/: App.tsx  config.ts
zk-game-theory/frontend/src/components/: Layout.tsx
zk-game-theory/frontend/src/games/zk-game-theory/: ZkGameTheoryGame.tsx  circuit.json  circuit_hash.json  zkGameTheoryService.ts  zkUtils.ts
zk-game-theory/frontend/src/games/zk-game-theory/bindings/: README.md  package.json
zk-game-theory/frontend/src/games/zk-game-theory/bindings/src/: index.ts
zk-game-theory/frontend/src/utils/: constants.ts
zk-game-theory/scripts/: bindings.ts  build.ts  create.ts  deploy.ts  dev-game.ts  setup.ts
zk-game-theory/scripts/utils/: contracts.ts  env.ts
