[workspace]
resolver = "2"
version = "0.1.2"
members = [
  "contracts/zk-game-theory",
  "contracts/mock-game-hub",
]

[workspace.dependencies]
soroban-sdk = { git = "https://github.com/stellar/rs-soroban-sdk.git", rev = "acffbbd45be6a0a551146eebfc268d6f95078246" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
